--- a/Polynomial regression.ipynb
+++ b/Polynomial regression.ipynb
@@ -98,6 +98,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fit model using train data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
