--- a/Polynomial regression.ipynb
+++ b/Polynomial regression.ipynb
@@ -8,6 +8,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "y = ax + b \\\\\n",
+    "J(x) = MSE = \\frac{1}{m}(y-\\dot{y})^2 = \\frac{1}{m}(wx-\\dot{y}) \\\\\n",
+    "\\frac{\\partial{J}}{\\partial w} ||x*w-y||^2 \\\\\n",
+    "=> \\frac{\\partial{J}}{\\partial w} (xw-y)^T(xw-y) \\\\\n",
+    "=> \\frac{\\partial{J}}{\\partial w} (w^Tx^Txw - 2w^Tx^Ty+y^Ty) \\\\\n",
+    "=> (2x^Txw - 2x^Ty) \\\\\n",
+    "$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
