--- a/Logistic regression.ipynb
+++ b/Logistic regression.ipynb
@@ -1,6 +1,45 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Logistic regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{align}\n",
+    "if y = 1: p(y|x) = \\dot{y} \\\\\n",
+    "if y = 0: p(y|x) = 1 - \\dot{y} \\\\\n",
+    "p(y|x) = \\dot{y}^{y}(1-\\dot{y})^{1-y} \\\\\n",
+    "log(p(y|x) = log(\\dot{y}^y)*(1-\\dot{y})^{1-y} = y*log(\\dot{y})+(1-y)*log(1-\\dot{y})\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{align}\n",
+    "J = -(y*log(\\dot{y})+(1-y)*log(1-\\dot{y})) \\\\\n",
+    "\\sigma(z) = \\frac{1}{1+e^-z} \\\\\n",
+    "\\dot{y} = a = \\sigma(z) \\\\\n",
+    "z = w^Tx + b \\\\\n",
+    "\\frac{\\partial{J}}{\\partial w} = \\frac{\\partial{J}}{\\partial a}\\frac{\\partial{a}}{\\partial z}\\frac{\\partial{z}}{\\partial w} \\\\\n",
+    "\\frac{\\partial{J}}{\\partial b} = \\frac{\\partial{J}}{\\partial a}\\frac{\\partial{a}}{\\partial z}\\frac{\\partial{z}}{\\partial b} \\\\\n",
+    "\\frac{\\partial{J}}{\\partial a} = -(\\frac{y}{a}+\\frac{1-y}{1-a}) \\\\\n",
+    "\\frac{\\partial{a}}{\\partial{z}} = a(1-a) \\\\\n",
+    "\\frac{\\partial{z}}{\\partial{w}} = x \\\\\n",
+    "\\frac{\\partial{z}}{\\partial{b}} = 1 \\\\\n",
+    "\\frac{\\partial{J}}{\\partial w} = (a-y)x \\\\\n",
+    "\\frac{\\partial{J}}{\\partial b} = (a-y) \\\\\n",
+    "\\end{align}"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
