--- a/Simple multilayer neural network.ipynb
+++ b/Simple multilayer neural network.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Simple multilayer neural network"
+    "# Multilayer neural network"
    ]
   },
   {
